--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Anglobulario - Reto de Vocabulario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favico.ico" type="image/x-icon">
 </head>
 
 <body>
