Fixer: score-items

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         </div>
 
         <div id="word-card">
-            <div class="score-item danger"><i class="fas fa-times"></i> <span id="wrong-count">0</span></div>
+            <div class="score-item danger"><i class="fas fa-times"></i> <span class="msg">No se! 🤷</span></div>
             <h2 id="word"></h2>
             <button id="play-audio" aria-label="Reproducir audio"><i class="fas fa-play"></i>Touch me</button>
             <p id="pronunciation"></p>
             <p id="translation"></p>
-            <div class="score-item success"><i class="fas fa-check"></i> <span id="correct-count">0</span></div>
+            <div class="score-item success"><i class="fas fa-check"></i> <span class="msg">Si se! 🥳</span></div>
         </div>
         
         <div hidden class="score-display">
