Fixer: continue timeout counter, Refactor: CSS img logo, podium

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Pantalla de configuración -->
     <section id="setup-screen" class="screen">
         <div class="config-container">
+            <img class="logo" src="logo.webp">
             <h2 class="section-title">Configuración del Juego</h2>
             <form id="game-setup">
                 <div class="players-container">
@@ -90,19 +91,23 @@
     <!-- Pantalla de resultados -->
     <section id="results-screen" class="screen">
         <div class="results-container">
+            <img class="logo" src="logo.webp">
             <h2 class="section-title">Resultados Finales</h2>
             <div id="podium">                
                 <div class="podium-item silver">
                     <i class="fas fa-medal"></i>
                     <span class="position">2°</span>
+                    <p id="podium-2"></p>
                 </div>
                 <div class="podium-item gold">
                     <i class="fas fa-medal"></i>
                     <span class="position">1°</span>
+                    <p id="podium-1"></p>
                 </div>
                 <div class="podium-item bronze">
                     <i class="fas fa-medal"></i>
                     <span class="position">3°</span>
+                    <p id="podium-3"></p>
                 </div>
             </div>
             <table id="results-table">
