Refactor: create footer and msg

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Juego educativo de vocabulario en inglés - Anglobulario">
+    
+    <!-- Metaetiquetas SEO -->
+    <meta name="description" content="Anglobulario: Un juego multijugador divertido para repasar y aprender nuevo vocabulario. Hasta 6 jugadores.">
+    <meta name="keywords" content="Anglobulario, juego de vocabulario, multijugador, aprendizaje de idiomas, juegos educativos">
+    <meta name="author" content="isflores">
+
+    <!-- Metaetiquetas para redes sociales -->
+    <meta property="og:title" content="Anglobulario - Juego Multijugador de Vocabulario">
+    <meta property="og:description" content="Anglobulario: Un juego multijugador divertido para repasar y aprender nuevo vocabulario. Hasta 6 jugadores.">
+    <meta property="og:image" content="logo.webp">
+    <meta property="og:url" content="URL_DEL_SITIO_WEB">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Anglobulario - Juego Multijugador de Vocabulario">
+    <meta name="twitter:description" content="Anglobulario: Un juego multijugador divertido para repasar y aprender nuevo vocabulario. Hasta 6 jugadores.">
+    <meta name="twitter:image" content="logo.webp">
+    
     <title>Anglobulario - Reto de Vocabulario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -124,9 +142,18 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer id="footer">
+        <p>Creado por <a href="https://github.com/isflores" target="_blank">isflores</a> | 
+            <a href="https://github.com/isflores/Anglobulario" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </p>
+        <p>Este proyecto es solo con fines didácticos y sin fines de lucro.</p>
+    </footer>
+
     <canvas id="confetti-canvas"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
