Fixer: Anchor in footer

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
     <!-- Footer -->
     <footer id="footer">
-        <p>Creado por <a href="https://github.com/isflores" target="_blank">isflores</a> | 
-            <a href="https://github.com/isflores/Anglobulario" target="_blank">
+        <p>Creado por <a href="https://github.com/IsaacFloresv" target="_blank">isflores</a> | 
+            <a href="https://github.com/IsaacFloresv/Anglobulario" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
         </p>
